[tool.poetry]
name = "shiny"
version = "0.1.0"
description = ""
authors = ["Kozehh <anthony.r@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.276"
weaviate-client = "^3.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
